[tool.poetry]
name = "twist.moe"
version = "0.0.1"
description = "A modern CLI to download animes automatically from Twist"
authors = ["Alain BERRIER"]

[tool.poetry.dependencies]
python = "^3.7"
typer = "0.3.2"
typer-cli = "0.0.11"
httpx = "0.16.1"
Faker = "5.0.2"
Js2Py = "0.70"
pydantic = "1.7.3"
fuzzywuzzy = "0.18.0"
numpy = "1.18.5"
tqdm = "4.55.0"
tenacity = "6.3.1"
arrow = "0.17.0"
pycryptodomex = "3.9.9"
[tool.poetry.dev-dependencies]
IPython="*"
jedi = "0.17.2"
coverage="*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
