[tool.poetry]
name = "kurby"
version = "0.0.4"
description = "A modern CLI to download animes automatically from Twist.moe"
license = "BSD-2-Clause"
authors = ["Alain BERRIER <alain.berrier@outlook.com>"]
maintainers = ["Alain BERRIER <alain.berrier@outlook.com>"]
readme = "README.md"
homepage = "https://github.com/aberrier/kurby"
repository = "https://github.com/aberrier/kurby"
documentation = "https://github.com/aberrier/kurby"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Education",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed"
]
packages = [
    { include = "kurby"},
]

[tool.poetry.scripts]
kurby = 'kurby.cli:start'

[tool.poetry.dependencies]
python = "^3.7"
typer = "0.3.2"
typer-cli = "0.0.11"
httpx = "0.16.1"
Faker = "5.0.2"
Js2Py = "0.70"
pydantic = "1.7.3"
fuzzywuzzy = "0.18.0"
tqdm = "4.55.0"
tenacity = "6.3.1"
arrow = "0.17.0"
pycryptodomex = "3.9.9"
PyInquirer = "1.0.3"

[tool.poetry.dev-dependencies]
IPython="*"
jedi = "0.17.2"
coverage="*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
