[tool.poetry]
name = "kurby"
version = "0.2.1"
description = "A modern CLI to download animes automatically from Twist.moe"
license = "BSD-2-Clause"
authors = ["Alain BERRIER <alain.berrier@outlook.com>"]
maintainers = ["Alain BERRIER <alain.berrier@outlook.com>"]
readme = "README.md"
homepage = "https://github.com/aberrier/kurby"
repository = "https://github.com/aberrier/kurby"
documentation = "https://github.com/aberrier/kurby"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Education",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed"
]
packages = [
    { include = "kurby"},
]

[tool.poetry.scripts]
kurby = 'kurby.cli:start'

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0"
typer-cli = "^0"
httpx = "^0"
Faker = "^5"
Js2Py = "^0"
pydantic = "^1.7"
fuzzywuzzy = "^0"
tqdm = "^4"
tenacity = "^6"
arrow = "^0.17"
pycryptodomex = "^3.9"
PyInquirer = "^1.0.3"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
ipython ="*"
jedi = "0.17.2"
coverage="*"
pytest = "^6"
pytest-black = "^0"
pytest-cov = "^2"
pytest-sugar = "^0"
pytest-socket = "^0"

[tool.pytest.ini_options]
addopts = [
    "--no-cov",
    "--black",
    "-m not external",
    "--disable-socket",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.semantic_release]
branch = "master"
version_variable = "pyproject.toml:version"
version_source = "commit"
hvcs = "gitlab"
